--- a/HousePrice_Prediction/Houseprice_Prediction.ipynb
+++ b/HousePrice_Prediction/Houseprice_Prediction.ipynb
@@ -1655,7 +1655,7 @@
     "\n",
     "# Create a bar plot\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.bar(models, r2_scores, color=['blue', 'orange', 'green', 'red'])\n",
+    "plt.bar(models, r2_scores, color=['blue', 'orange', 'green'])\n",
     "plt.xlabel('Models')\n",
     "plt.ylabel('R2 Score')\n",
     "plt.title('R2 Score Comparison for Different Models')\n",
@@ -1686,7 +1686,7 @@
     "\n",
     "# Create a bar plot\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.bar(models, mae_scores, color=['blue', 'orange', 'green', 'red'])\n",
+    "plt.bar(models, mae_scores, color=['blue', 'orange', 'green'])\n",
     "plt.xlabel('Models')\n",
     "plt.ylabel('Mean Absolute Error (MAE)')\n",
     "plt.title('MAE Comparison for Different Models')\n",
